# dicey

./: Cargo.toml  LICENCE  README.md
src/: bin.rs  lib.rs
