[package]
name = "dicey"
version = "1.0.0"
authors = ["Kyle Kinsey <kinseywk@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Simple library for parsing dice strings of the form \"adx,bdy,cdz\", where a, b, & c are quantity of dice and x, y, & z are the number of faces on those dice; e.g., 5d6 represents 5 6-sided dice, as in the game Yahtzee"
homepage = "https://github.com/kinseywk/dicey"
documentation = "https://github.com/kinseywk/dicey"
repository = "https://github.com/kinseywk/dicey"
readme = "README.md"

[lib]
name = "dicey"
path = "src/lib.rs"

[[bin]]
name = "dicey"
path = "src/bin.rs"

[dependencies]
rand = "*"